<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:contentDescription="For more visit www.materialuiux.com"
    tools:context="com.example.news.ui.main.SignInActivity">


    <ImageView
        android:id="@+id/id_logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:contentDescription="For more visit www.materialuiux.com"
        android:background="@drawable/ic_icon"
        />
    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/a"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimaryText" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/enter_your_email_to_sign_in_to_your_account" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/mail" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textSize="16dp"
                android:textColorHint="#BDC4D6"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/password" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/a"
                android:hint="@string/password"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="#BDC4D6"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/SigninButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/a"
            android:text="@string/signin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@color/colorBack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/a"
            android:gravity="center_horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/not_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/textViewSignUp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up_here"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/a" />
    </LinearLayout>

</LinearLayout>
