<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:foreground="@drawable/ss"
    android:padding="10dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="203dp"
            android:layout_height="146dp"
            android:src="@drawable/himit"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="90dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/himit"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </ImageView>

        <LinearLayout

            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableEnd="@android:drawable/ic_menu_upload"
                android:fontFamily="@font/a"
                android:padding="5dp"
                android:text="@string/load"
                app:drawableTint="@color/colorPrimaryDark"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/a"
                android:hint="@string/title"
                android:padding="5dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/a"
                android:hint="@string/description"
                android:padding="5dp"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/a"
                    android:text="@string/Cancel"
                    android:textColor="@color/colorBack">

                </Button>

                <Button
                    android:id="@+id/Save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/a"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/Save"
                    android:textColor="@color/colorBack">

                </Button>
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
